Fix noise layer. Fix cards width. Adjust Section 1 spacing for mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -66,26 +66,22 @@
     -webkit-text-fill-color: transparent;
 }
 
-.bg-banner {
-    background: rgb(22,10,47);
-    background: linear-gradient(90deg, rgba(22,10,47,1) 30%, rgba(43,36,57,1) 100%);
-}
-
-.bg-noise {
+.bg-curvature {
     position: relative;
     background-size: cover;
     background-repeat: no-repeat;
     background-image: url("/section1/background.svg");
 }
 
-.bg-noise:after {
+.noise {
     content: "";
     position: absolute;
     top: 0%;
     left: 0%;
+    z-index: 1;
     opacity: .03;
-    z-index: 10;
     width: 100%;
     height: 100%;
     background: url("/section1/Noise.gif");
+    pointer-events: none;
 }
